--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/g1aurav/g1aurav.github.io",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
